# putting-lenses-to-work

./: .gitignore  LICENSE  Lenses.hs  Makefile  README.md  flake.nix  lenses.el  putting-lenses-to-work.cabal  putting-lenses-to-work.org
test/: Main.hs
