name:          putting-lenses-to-work
version:       0.1.0.0
synopsis:      Some practical examples of using lens
homepage:      https://github.com/jwiegley/putting-lenses-to-work
license:       BSD3
license-file:  LICENSE
author:        John Wiegley
maintainer:    johnw@newartisans.com
category:      Development
build-type:    Simple
cabal-version: >=1.10

test-suite putting-lenses-to-work
  default-language: Haskell98
  type:    exitcode-stdio-1.0
  main-is: Lenses.hs
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:      
      base                 >= 4.9.1.0
    , bytestring           >= 0.10.8.1
    , containers           >= 0.5.7.1
    , hspec                >= 2.4.3
    , lens                 >= 4.15.1
    , lens-aeson           >= 1.0.0.5
    , mtl                  >= 2.2.1
    , text                 >= 1.2.2.1
    , thyme                >= 0.3.5.5
    , unordered-containers >= 0.2.8.0
